@@ -1,6 +1,6 @@
 
-#include <model/Sync.h>
 #include <ace/Log_Msg.h>
+#include <ace/Condition_T.h>
 
 #include <dds/DCPS/WaitSet.h>
 
@@ -11,6 +11,11 @@
 #include "model/RemoteInstHandlesTraits.h"
 #include <model/NullWriterListener.h>
 #include <model/Sync.h>
+
+bool matched = false;
+ACE_SYNCH_MUTEX lock;
+ACE_Condition<ACE_SYNCH_MUTEX> condition(lock);
+data1::Message message;
 
 namespace RIH {
   class WriterListener : public OpenDDS::Model::NullWriterListener {
@@ -24,6 +29,7 @@ void RIH::WriterListener::on_publication_matched(DDS::DataWriter_ptr writer,
                              const ::DDS::PublicationMatchedStatus & status)
 ACE_THROW_SPEC((CORBA::SystemException))
 {
+  std::cout << "pub match" << std::endl;
   if (status.current_count_change == 1) {
     DDS::InstanceHandle_t bitHandle = status.last_subscription_handle;
     DDS::SubscriptionBuiltinTopicData bitData;
@@ -33,6 +39,13 @@ ACE_THROW_SPEC((CORBA::SystemException))
       std::cout << "publisher: found remote participant key[0] " << participant_key.value[0] << std::endl;
       std::cout << "publisher: found remote participant key[1] " << participant_key.value[1] << std::endl;
       std::cout << "publisher: found remote participant key[2] " << participant_key.value[2] << std::endl;
+      message.subscriber_key[0] = participant_key.value[0];
+      message.subscriber_key[1] = participant_key.value[1];
+      message.subscriber_key[2] = participant_key.value[2];
+
+      ACE_GUARD(ACE_SYNCH_MUTEX, conditionGuard, condition.mutex());
+      matched = true;
+      condition.broadcast();
     }
   }
 }
@@ -47,24 +60,29 @@ int ACE_TMAIN(int argc, ACE_TCHAR** argv)
 
     DDS::DataWriter_var writer = model.writer(Elements::DataWriters::writer);
     DDS::DataWriterListener_var listener(new RIH::WriterListener);
-    writer->set_listener( listener.in(), OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+    writer->set_listener(listener.in(), OpenDDS::DCPS::DEFAULT_STATUS_MASK);
+    writer->enable();
 
     // START OF EXISTING MESSENGER EXAMPLE CODE
-
-    data1::MessageDataWriter_var message_writer =
-      data1::MessageDataWriter::_narrow(writer.in());
-
-    if (CORBA::is_nil(message_writer.in())) {
-        ACE_ERROR_RETURN((LM_ERROR,
-                          ACE_TEXT("(%P|%t) ERROR: %N:%l: main() -")
-                          ACE_TEXT(" _narrow failed!\n")),
-                         -1);
-    }
-
+    std::cout << "pub waiting for sync" << std::endl;
     OpenDDS::Model::WriterSync ws(writer);
     {
+      data1::MessageDataWriter_var message_writer =
+        data1::MessageDataWriter::_narrow(writer);
+  
+      if (CORBA::is_nil(message_writer.in())) {
+          ACE_ERROR((LM_ERROR,
+                     ACE_TEXT("(%P|%t) ERROR: %N:%l: main() -")
+                     ACE_TEXT(" _narrow failed!\n")));
+          return -1;
+      }
+
+      std::cout << "pub waiting for match" << std::endl;
+      ACE_GUARD_RETURN(ACE_SYNCH_MUTEX, conditionGuard, condition.mutex(), -1);
+      while (!matched) {
+        condition.wait();
+      }
       // Write samples
-      data1::Message message;
       message.subject_id = 99;
 
       message.from       = CORBA::string_dup("Comic Book Guy");
@@ -97,6 +115,7 @@ int ACE_TMAIN(int argc, ACE_TCHAR** argv)
                      -1);
   }
 
+  std::cout << "pub exiting" << std::endl;
   return 0;
 }
 
